--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
+
+
+
+    <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
   </body>
 </html>
